Remove the overflow of dropdown menu container in docs | Fixes #1111

--- a/clayui.com/src/styles/site/_content-site.scss
+++ b/clayui.com/src/styles/site/_content-site.scss
@@ -95,7 +95,6 @@
 	.clay-site-dropdown-menu-container {
 		display: inline-block;
 		margin-right: 15px;
-		overflow: hidden;
 		vertical-align: top;
 
 		.dropdown-menu {
